Fix: Support view zooming without clipping cards

--- a/client/style/home.sass
+++ b/client/style/home.sass
@@ -16,6 +16,9 @@
         color: white
         font-weight: bold
 
+.sample-img-card
+    background-color: #d3d3d3
+
 #Features
     margin: 5px
 
